--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -826,6 +826,13 @@ ul.rating {
   padding: 30px;
   background: url('/assets/quoteBg.png');
   margin-top:20px;
+  /*fantastic font*/
+  font-family: 'Dancing Script' !important;
+  font-size: 21px;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: 400;
+  line-height: 30px;
 }
 
 .fa-quote-right:before, .fa-quote-left:before{
